--- a/templates/linear.html
+++ b/templates/linear.html
@@ -21,7 +21,7 @@
 <center>
 <div class="row">
    
-<img class="w-50 col-md-6" src="/static/linearreading.png"></img>
+<img class="w-50 col-md-6" src="/static/linearreading.PNG"></img>
 <div class="col-md-6 bg-light rounded-3 fs-4">Importing pandas to perform data cleaning in the datasets
     <br>Importing linear regression model from sklearn<br>
     Traintestsplit to split our data to training and testing respectively<br>
@@ -36,12 +36,12 @@
         <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:90px;"> 
             Reading the database
         </div>
-        <img class="w-50 col-md-6" src="/static/linearread.png"></img>
+        <img class="w-50 col-md-6" src="/static/linearread.PNG"></img>
         <center>
             <br>
             <center>
                 <div class="row">
-                    <img class="w-50 col-md-6" src="/static/linearcor.png"></img>
+                    <img class="w-50 col-md-6" src="/static/linearcor.PNG"></img>
                 <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:200px;"> 
                     Heatmap to show correlation betweeen the data
                 </div>
@@ -55,13 +55,13 @@
                             <br>
                             The Y variable contains the dependent variable which has to be predicted
                         </div>
-                        <img class="w-50 col-md-6" src="/static/linearxy.png"></img>
+                        <img class="w-50 col-md-6" src="/static/linearxy.PNG"></img>
                         <center>
                             <br>
                             <br>
                     <center>
                         <div class="row">
-                            <img class="w-50 col-md-6" src="/static/linearreg.png"></img>
+                            <img class="w-50 col-md-6" src="/static/linearreg.PNG"></img>
                         <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:30px;"> 
                             Dividing the data into training and testing data  
                             <br>
