--- a/templates/linear2.html
+++ b/templates/linear2.html
@@ -22,7 +22,7 @@
 <center>
 <div class="row">
    
-<img class="w-50 col-md-6" src="/static/linear2import.png"></img>
+<img class="w-50 col-md-6" src="/static/linear2import.PNG"></img>
 <div class="col-md-6 bg-light rounded-3 fs-4">Importing pandas to perform data cleaning in the datasets
     <br>Importing linear regression model from sklearn<br>
     Traintestsplit to split our data to training and testing respectively<br>
@@ -37,12 +37,12 @@
         <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:90px;"> 
             Reading the database
         </div>
-        <img class="w-50 col-md-6" src="/static/linear2read.png"></img>
+        <img class="w-50 col-md-6" src="/static/linear2read.PNG"></img>
         <center>
             <br>
             <center>
                 <div class="row">
-                    <img class="w-50 col-md-6" src="/static/linear2test.png"></img>
+                    <img class="w-50 col-md-6" src="/static/linear2test.PNG"></img>
                 <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:00px;"> 
                     The X variable contains all the independent values 
                     <br>
@@ -58,13 +58,13 @@
                             <br>
                             Fitting data in Linear Regression model to train our machine
                         </div>
-                        <img class="w-50 col-md-6" src="/static/linear2model.png"></img>
+                        <img class="w-50 col-md-6" src="/static/linear2model.PNG"></img>
                         <center>
                             <br>
                             <br>
                     <center>
                         <div class="row">
-                            <img class="w-50 col-md-6" src="/static/linear2pred.png"></img>
+                            <img class="w-50 col-md-6" src="/static/linear2pred.PNG"></img>
                         <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:0px;"> 
                             Putting test data in prediction model and the code to check R2_score
                         </div>
