--- a/templates/linear3.html
+++ b/templates/linear3.html
@@ -21,7 +21,7 @@
 <center>
 <div class="row">
    
-<img class="w-50 col-md-6" src="/static/linear3imp.png"></img>
+<img class="w-50 col-md-6" src="/static/linear3imp.PNG"></img>
 <div class="col-md-6 bg-light rounded-3 fs-4">Importing pandas to perform data cleaning in the datasets
     <br>Importing linear regression model from sklearn<br>
     Traintestsplit to split our data to training and testing respectively<br>
@@ -39,7 +39,7 @@
         <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:90px;"> 
             Reading the database
         </div>
-        <img class="w-50 col-md-6" src="/static/linear3read.png"></img>
+        <img class="w-50 col-md-6" src="/static/linear3read.PNG"></img>
         <center>
             <br>
                     <center>
@@ -49,13 +49,13 @@
                             <br>
                             The Y variable contains the dependent variable which has to be predicted
                         </div>
-                        <img class="w-50 col-md-6" src="/static/linear3xy.png"></img>
+                        <img class="w-50 col-md-6" src="/static/linear3xy.PNG"></img>
                         <center>
                             <br>
                             <br>
                     <center>
                         <div class="row">
-                            <img class="w-50 col-md-6" src="/static/linear3train.png"></img>
+                            <img class="w-50 col-md-6" src="/static/linear3train.PNG"></img>
                         <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:0px;"> 
                             Dividing the data into training and testing data  
                             <br>
