--- a/templates/logistic.html
+++ b/templates/logistic.html
@@ -23,7 +23,7 @@
 <center>
 <div class="row">
    
-<img class="w-50 col-md-6" src="\static\Screenshot (21).png"></img>
+<img class="w-50 col-md-6" src="\static\Screenshot (21).PNG"></img>
 <div class="col-md-6 bg-light rounded-3 fs-4">Importing pandas to perform data cleaning in the datasets
     <br>Importing logistic regression model from sklearn<br>
     Traintestsplit to split our data to training and testing respectively<br>
@@ -37,12 +37,12 @@
         <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:90px;"> 
             Reading the database
         </div>
-        <img class="w-50 col-md-6" src="\static\Screenshot (22).png"></img>
+        <img class="w-50 col-md-6" src="\static\Screenshot (22).PNG"></img>
         <center>
             <br>
             <center>
                 <div class="row">
-                    <img class="w-50 col-md-6" src="\static\Screenshot (23).png"></img>
+                    <img class="w-50 col-md-6" src="\static\Screenshot (23).PNG"></img>
                 <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:200px;"> 
                     Heatmap to show correlation betweeen the data
                 </div>
@@ -56,13 +56,13 @@
                             <br>
                             The Y variable contains the dependent variable which has to be predicted
                         </div>
-                        <img class="w-50 col-md-6" src="\static\Screenshot (24).png"></img>
+                        <img class="w-50 col-md-6" src="\static\Screenshot (24).PNG"></img>
                         <center>
                             <br>
                             <br>
                     <center>
                         <div class="row">
-                            <img class="w-50 col-md-6" src="\static\Screenshot (25).png"></img>
+                            <img class="w-50 col-md-6" src="\static\Screenshot (25).PNG"></img>
                         <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:30px;"> 
                             Dividing the data into training and testing data  
                             <br>
@@ -78,7 +78,7 @@
                                 <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:10px;"> 
                                    Code to check Accuracy score
                                 </div>
-                                <img class="w-50 col-md-6" src="\static\Screenshot (25).png"></img>
+                                <img class="w-50 col-md-6" src="\static\Screenshot (25).PNG"></img>
                                 
                                 <center>
                                     <br>
