--- a/templates/logistic2.html
+++ b/templates/logistic2.html
@@ -24,7 +24,7 @@
 <center>
 <div class="row">
  
-<img class="w-50 col-md-6" src="\static\logistic2import.png"></img>
+<img class="w-50 col-md-6" src="\static\logistic2import.PNG"></img>
 <div class="col-md-6 bg-light rounded-3 fs-4">Importing pandas to perform data cleaning in the datasets
   <br>Importing logistic regression model from sklearn<br>
   Traintestsplit to split our data to training and testing respectively<br>
@@ -38,7 +38,7 @@
       <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:20px;"> 
           Reading the database
       </div>
-      <img class="w-50 col-md-6" src="\static\logistic2read.png"></img>
+      <img class="w-50 col-md-6" src="\static\logistic2read.PNG"></img>
       <center>
                   <br>
                   <center>
@@ -48,13 +48,13 @@
                           <br>
                           The Y variable contains the dependent variable which has to be predicted
                       </div>
-                      <img class="w-50 col-md-6" src="\static\logistic2xy.png"></img>
+                      <img class="w-50 col-md-6" src="\static\logistic2xy.PNG"></img>
                       <center>
                           <br>
                           <br>
                   <center>
                       <div class="row">
-                          <img class="w-50 col-md-6" src="\static\logistic2xy.png"></img>
+                          <img class="w-50 col-md-6" src="\static\logistic2xy.PNG"></img>
                       <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:30px;"> 
                           Dividing the data into training and testing data  
                           <br>
@@ -70,7 +70,7 @@
                               <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:10px;"> 
                                  Code to check Accuracy score
                               </div>
-                              <img class="w-50 col-md-6" src="\static\logistic2score.png"></img>
+                              <img class="w-50 col-md-6" src="\static\logistic2score.PNG"></img>
                               
                               <center>
                                   <br>
