--- a/templates/logistic3.html
+++ b/templates/logistic3.html
@@ -37,12 +37,12 @@
         <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:90px;"> 
             Reading the database
         </div>
-        <img class="w-50 col-md-6" src="\static\Screenshot (9).PNG"></img>
+        <img class="w-50 col-md-6" src="\static\Screenshot9.PNG"></img>
         <center>
             <br>
             <center>
                 <div class="row">
-                    <img class="w-50 col-md-6" src="\static\Screenshot (11).PNG"></img>
+                    <img class="w-50 col-md-6" src="\static\Screenshot11.PNG"></img>
                 <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:200px;"> 
                     Heatmap to show correlation betweeen the data
                 </div>
@@ -56,13 +56,13 @@
                             <br>
                             The Y variable contains the dependent variable which has to be predicted
                         </div>
-                        <img class="w-50 col-md-6" src="\static\Screenshot (12).PNG"></img>
+                        <img class="w-50 col-md-6" src="\static\Screenshot12.PNG"></img>
                         <center>
                             <br>
                             <br>
                     <center>
                         <div class="row">
-                            <img class="w-50 col-md-6" src="\static\Screenshot (13).PNG"></img>
+                            <img class="w-50 col-md-6" src="\static\Screenshot13.PNG"></img>
                         <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:30px;"> 
                             Dividing the data into training and testing data  
                             <br>
@@ -78,14 +78,14 @@
                                 <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:10px;"> 
                                    Code to check Accuracy Score
                                 </div>
-                                <img class="w-50 col-md-6" src="\static\Screenshot (14).PNG"></img>
+                                <img class="w-50 col-md-6" src="\static\Screenshot14.PNG"></img>
                                 
                                 <center>
                                     <br>
                                     <br>
                                     <center>
                                         <div class="row">
-                                            <img class="w-50 col-md-6" src="\static\Screenshot (15).PNG"></img>
+                                            <img class="w-50 col-md-6" src="\static\Screenshot15.PNG"></img>
                                         <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:5px;"> 
                                            Code to see Classification Report
                                         </div>
