--- a/templates/base.html
+++ b/templates/base.html
@@ -48,9 +48,9 @@
                   SVM
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="/linear">SVM Example 1</a></li>
-                  <li><a class="dropdown-item" href="/linear2">SVM Example 2</a></li>
-                  <li><a class="dropdown-item" href="/linear3">SVM Example 3</a></li>
+                  <li><a class="dropdown-item" href="/svm">SVM Example 1</a></li>
+                  <li><a class="dropdown-item" href="/svm1">SVM Example 2</a></li>
+                  <li><a class="dropdown-item" href="/svm2">SVM Example 3</a></li>
                 </ul>
               </li>
               
