--- a/templates/home.html
+++ b/templates/home.html
@@ -124,7 +124,7 @@
       <p>SVMs can efficiently perform a non-linear classification using what is called the kernel trick, 
         implicitly mapping their inputs into high-dimensional feature spaces.The objective of SVM algorithm is to 
         find a hyperplane in an N-dimensional space that distinctly classifies the data points.</p>
-      <p><a class="btn btn-secondary" href="#">SVM Example 1</a></p>
+      <p><a class="btn btn-secondary" href="svm">SVM Example 1</a></p>
       <p><a class="btn btn-secondary" href="#">SVM Example 2</a></p>
       <p><a class="btn btn-secondary" href="#">SVM Example 3</a></p>
       <br>
