--- a/templates/linear2.html
+++ b/templates/linear2.html
@@ -88,22 +88,7 @@
                                 <div class="col-md-6 h-50 display-4 bg-light rounded-3" style="margin-top:170px"> R2_Score :- {{variable}}</div>
                             </div>
                             <br>
-            <div class="bg-light p-3 rounded-3 ">
-                <label class="form-label">R&D Spend</label>
-                <input type="text" class="form-control" id="rd">
-                <br>
-                <label class="form-label">Administration</label>
-                <input type="text" class="form-control" id="admin">
-                <br>
-                <label class="form-label">Marketing Spend</label>
-                <input type="text" class="form-control" id="market">
-                <br>
-                <input type="button" class="btn btn-primary" id="pred" value="Click To See Predicted">
-                <br>
-                <br>
-                <p class="display-6" id="p"></p>
-                
-            </div>
+           
             <br>
 </div>
 
@@ -122,7 +107,7 @@
         market=market.value;
         $.ajax({
         type : "post",
-        url : "/linear",
+        url : "/linear3",
         data: {csrfmiddlewaretoken: '{{ csrf_token }}',
         rd,
         admin,
