--- a/templates/logistic3.html
+++ b/templates/logistic3.html
@@ -24,7 +24,7 @@
 <center>
 <div class="row">
    
-<img class="w-50 col-md-6" src="/static/heat.PNG"></img>
+<img class="w-50 col-md-6" src="/static/svmxy.PNG"></img>
 <div class="col-md-6 bg-light rounded-3 fs-4">Importing pandas to perform data cleaning in the datasets
     <br>Importing linear regression model from sklearn<br>
     Traintestsplit to split our data to training and testing respectively<br>
