--- a/templates/logistic3.html
+++ b/templates/logistic3.html
@@ -37,7 +37,7 @@
         <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:90px;"> 
             Reading the database
         </div>
-        <img class="w-50 col-md-6" src="\static\screenshot9.PNG"></img>
+        <img class="w-50 col-md-6" src="\static\screenshot9.jpg"></img>
         <center>
             <br>
             <center>
