--- a/templates/logistic3.html
+++ b/templates/logistic3.html
@@ -24,7 +24,7 @@
 <center>
 <div class="row">
    
-<img class="w-50 col-md-6" src="/static/heat.PNG"></img>
+<img class="w-50 col-md-6" src="/static/heat.jpg"></img>
 <div class="col-md-6 bg-light rounded-3 fs-4">Importing pandas to perform data cleaning in the datasets
     <br>Importing linear regression model from sklearn<br>
     Traintestsplit to split our data to training and testing respectively<br>
@@ -42,7 +42,7 @@
             <br>
             <center>
                 <div class="row">
-                    <img class="w-50 col-md-6" src="\static\screenshot11.PNG"></img>
+                    <img class="w-50 col-md-6" src="\static\screenshot11.jpg"></img>
                 <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:200px;"> 
                     Heatmap to show correlation betweeen the data
                 </div>
@@ -56,13 +56,13 @@
                             <br>
                             The Y variable contains the dependent variable which has to be predicted
                         </div>
-                        <img class="w-50 col-md-6" src="\static\screenshot12.PNG"></img>
+                        <img class="w-50 col-md-6" src="\static\screenshot12.jpg"></img>
                         <center>
                             <br>
                             <br>
                     <center>
                         <div class="row">
-                            <img class="w-50 col-md-6" src="\static\screenshot13.PNG"></img>
+                            <img class="w-50 col-md-6" src="\static\screenshot13.jpg"></img>
                         <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:30px;"> 
                             Dividing the data into training and testing data  
                             <br>
@@ -78,14 +78,14 @@
                                 <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:10px;"> 
                                    Code to check Accuracy Score
                                 </div>
-                                <img class="w-50 col-md-6" src="/static/screenshot14.PNG"></img>
+                                <img class="w-50 col-md-6" src="/static/screenshot14.jpg"></img>
                                 
                                 <center>
                                     <br>
                                     <br>
                                     <center>
                                         <div class="row">
-                                            <img class="w-50 col-md-6" src="/static/screenshot15.PNG"></img>
+                                            <img class="w-50 col-md-6" src="/static/screenshot15.jpg"></img>
                                         <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:5px;"> 
                                            Code to see Classification Report
                                         </div>
