--- a/templates/logistic.html
+++ b/templates/logistic.html
@@ -37,12 +37,12 @@
         <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:90px;"> 
             Reading the database
         </div>
-        <img class="w-50 col-md-6" src="\static\Screenshot22.jpg"></img>
+        <img class="w-50 col-md-6" src="\static\screenshot22.jpg"></img>
         <center>
             <br>
             <center>
                 <div class="row">
-                    <img class="w-50 col-md-6" src="\static\Screenshot23.jpg"></img>
+                    <img class="w-50 col-md-6" src="\static\screenshot23.jpg"></img>
                 <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:200px;"> 
                     Heatmap to show correlation betweeen the data
                 </div>
@@ -56,13 +56,13 @@
                             <br>
                             The Y variable contains the dependent variable which has to be predicted
                         </div>
-                        <img class="w-50 col-md-6" src="\static\Screenshot24.jpg"></img>
+                        <img class="w-50 col-md-6" src="\static\screenshot24.jpg"></img>
                         <center>
                             <br>
                             <br>
                     <center>
                         <div class="row">
-                            <img class="w-50 col-md-6" src="\static\Screenshot25.jpg"></img>
+                            <img class="w-50 col-md-6" src="\static\screenshot25.jpg"></img>
                         <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:30px;"> 
                             Dividing the data into training and testing data  
                             <br>
@@ -71,16 +71,7 @@
                         
                         <center>
                             <br>
-                            <br>
-                            <center>
-                                <div class="row">
-                                    
-                                <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:10px;"> 
-                                   Code to check Accuracy score
-                                </div>
-                                <img class="w-50 col-md-6" src="\static\Screenshot25.jpg"></img>
-                                
-                                <center>
+                         
                                     <br>
                                    
                                             <input type="button" class="btn btn-primary" id="linearbtn" value="Click To See Accuracy score">
