--- a/templates/logistic.html
+++ b/templates/logistic.html
@@ -23,7 +23,7 @@
 <center>
 <div class="row">
    
-<img class="w-50 col-md-6" src="\static\Screenshot21.jpg"></img>
+<img class="w-50 col-md-6" src="\static\screenshot21.jpg"></img>
 <div class="col-md-6 bg-light rounded-3 fs-4">Importing pandas to perform data cleaning in the datasets
     <br>Importing logistic regression model from sklearn<br>
     Traintestsplit to split our data to training and testing respectively<br>
