--- a/templates/logistic2.html
+++ b/templates/logistic2.html
@@ -7,10 +7,13 @@
 <div class="bg-light rounded-3 text-center fs-4 p-2">
   <h2 class="display-4">Logistic Regression</h2>
   Logistic regression is a statistical analysis method to predict a binary outcome, such as yes or no, based on prior observations of a data set.
-  A logistic regression model predicts a dependent data variable by analyzing the relationship between one or more existing independent variables. For example, a logistic regression could be used to predict whether a political candidate will win or lose an election or whether a high school student will be admitted or not to a particular college. 
+  A logistic regression model predicts a dependent data variable by analyzing the relationship between one or more existing independent variables. For example, a
+   logistic regression could be used to predict whether a political candidate will win or lose an election or whether a high school student will be admitted or not 
+   to a particular college. 
   These binary outcomes allow straightforward decisions between two alternatives.
   A logistic regression model can take into consideration multiple input criteria. 
-  In the case of college acceptance, the logistic function could consider factors such as the student's grade point average, SAT score and number of extracurricular activities. Based on historical data about earlier outcomes involving the same input criteria, 
+  In the case of college acceptance, the logistic function could consider factors such as the student's grade point average, SAT score and number of extracurricular
+   activities. Based on historical data about earlier outcomes involving the same input criteria, 
   it then scores new cases on their probability of falling into one of two outcome categories</div>
 
 <br>
